<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    android:onClick="onTap"

    tools:context="com.example.tommyle.number.OfflineActivity">

    <Button
        android:id="@+id/btMenu"
        android:layout_width="65dp"
        android:layout_height="35dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@android:color/black"
        android:onClick="onMenu"
        android:text="@string/menu"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/vColor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/color1"
        android:gravity="center"
        android:text="@string/_00"
        android:textScaleX="0.8"
        android:textColor="@color/number1"
        android:textSize="100sp"
        app:layout_heightPercent="37%"
        app:layout_marginTopPercent="37%"
        app:layout_widthPercent="42%" />

    <TextView
        android:id="@+id/tvTap"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_alignTop="@+id/vColor"
        android:layout_marginLeft="-22dp"
        android:layout_marginTop="-22dp"
        android:layout_toRightOf="@+id/vColor"
        android:background="@drawable/background_black"
        android:gravity="center"
        android:text="@string/_1"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tvTapTap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/tap_tap"
        android:textColor="@color/taptap"
        android:textSize="50sp"
        android:textStyle="italic"
        app:layout_marginBottomPercent="8%" />

    <TextView
        android:id="@+id/tvSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/_8"
        android:textColor="@color/giay"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_marginTopPercent="7%" />

    <TextView
        android:id="@+id/tvTurn"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_yourturn"
        android:gravity="center"
        android:text="@string/your_turn"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_marginTopPercent="23%"
        app:layout_widthPercent="32%" />


</android.support.percent.PercentRelativeLayout>
